# plato-reader

./: .gitignore  404.html  ADDING-A-WORK.md  CLAUDE.md  DEPLOY-STATUS.md  README.md  build  index.html  package-lock.json  package.json  robots.txt  sitemap-0.xml  sitemap-index.xml  sw.js
Alcibiades1/: index.html
pipeline/: gen_speaker_rosters.py  generate_review_html.py  pyproject.toml  run_edghill_gloss.py
pipeline/plato_pipeline/: __main__.py  align_turns.py  beta.py  config.py  parse_filter.py  preflight.py  refs.py  scheme.py  stage1_archive.py  stage1_chapters.py  stage1_common.py  stage1_english.py  stage1_greek.py  stage1_ostwald.py  stage1_perseus.py  stage1_ross.py  stage1_stephanus_english.py  stage2_validate.py  stage3_tokenize.py  stage4_morphology.py  stage5_lsj.py  stage6_search.py  stage7_emit.py  turns.py  verify_shared_lsj.py
pipeline/tests/: test_beta.py  test_ocr_postprocess.py  test_paragraph_markers.py  test_parse_filter.py  test_preflight.py  test_refs.py  test_scheme.py  test_stage1_refactor.py  test_stage2_stage3.py  test_stephanus.py  test_stephanus_english.py  test_turns.py
pipeline/tools/: apply_parse_filter.py  bakeoff.py  build_ee_rackham.py  build_ee_solomon.py  edit_interp.py  emit_align_tasks.py  emit_sent_gloss_tasks.py  extract_fyfe_poetics.py  fetch_ga_platt.py  fetch_natphil.py  fetch_pa_ogle.py  gate_calib.py  gloss_map_to_anchors.py  make_index.py  merge_juv.py  ocr_postprocess.py  persist_book.py  render_interp.py  residual.py  sentence_interp.py  sentence_spike.py  verify_gather.py  verify_score.py  verify_to_offsets.py
(+11718 files in other folders)
